salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/OSFMX_SupplyPointForOffer__c.object-meta.xml
<CustomObject>
    <description>Indica los puntos de suministro a considerar por una oferta multipunto.</description>
    <label>Punto De Suministro Para Oferta</label>
    <nameField>
        <label>Supply Point For Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Puntos De Suministro Para Oferta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>