salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/fields/OSFMX_ChildQuote__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ChildQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Puntos De Suministro Para Oferta (Child Quote)</relationshipLabel>
    <relationshipName>Puntos_De_Suministro_Para_Oferta1</relationshipName>
    <type>Lookup</type>
</CustomField>