salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/fields/OSFMX_GJ__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GJ__c</fullName>
    <label>Consumo anual esperado (GJ/año)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>