salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/fields/OSFMX_hasQuote__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_hasQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene oferta</label>
    <type>Checkbox</type>
</CustomField>