salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/fields/OSFMX_Maximumdailycapacity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Maximumdailycapacity__c</fullName>
    <label>Capacidad máxima diaria</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>