salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/fields/OSFMX_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidad a la que pertenece el punto de suministro.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Puntos De Suministro Para Oferta</relationshipLabel>
    <relationshipName>Puntos_De_Suministro_Para_Oferta</relationshipName>
    <type>Lookup</type>
</CustomField>