salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/fields/OSFMX_Quote__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Quote__c</fullName>
    <description>Oferta a que pertenece el punto de suministro.</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Puntos De Suministro Para Oferta</relationshipLabel>
    <relationshipName>Puntos_De_Suministro_Para_Oferta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>