salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/fields/OSFMX_QuoteStatus__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_QuoteStatus__c</fullName>
    <label>Estado Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrador</fullName>
            </value>
            <value>
                <fullName>Proceso</fullName>
            </value>
            <value>
                <fullName>Observaciones</fullName>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Presentada</fullName>
            </value>
            <value>
                <fullName>Expirada</fullName>
            </value>
            <value>
                <fullName>Ganada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
            <value>
                <fullName>Imposible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>