salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/fields/OSFMX_ServicePoint__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ServicePoint__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Punto de suministro perteneciente a la oferta.</description>
    <label>Service Point</label>
    <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
    <relationshipLabel>Puntos De Suministro Para Oferta</relationshipLabel>
    <relationshipName>Puntos_De_Suministro_Para_Oferta</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>