salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/fields/OSFMX_SPAnnualConsumptionE__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SPAnnualConsumptionE__c</fullName>
    <label>Consumo anual esperado MWh/año</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>