salesforce_sfdx/main/default/objects/OSFMX_SupplyPointForOffer__c/fields/OSFMX_SyEMDemandaTotalPSO__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SyEMDemandaTotalPSO__c</fullName>
    <label>Potencia Total MW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>